dig-src/main/default/objects/Emission__c/Emission__c.object-meta.xml
<CustomObject>
    <description>Append-only event journal for DIG emissions</description>
    <label>Emission</label>
    <nameField>
        <label>Emission Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>