dig-src/main/default/objects/Emission__c/fields/Canonical__c.field-meta.xml
<CustomField>
    <fullName>Canonical__c</fullName>
    <label>Canonical</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>