dig-src/main/default/objects/Emission__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <label>Idempotency Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>