dig-src/main/default/objects/Emission__c/fields/Membership_Term__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term__c</fullName>
    <label>Membership Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>