dig-src/main/default/objects/Emission__c/fields/MembershipTerm__c.field-meta.xml
<CustomField>
    <fullName>MembershipTerm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Term</label>
    <referenceTo>Membership_Term__c</referenceTo>
    <relationshipName>Emissions</relationshipName>
    <type>Lookup</type>
</CustomField>