dig-src/main/default/objects/Emission__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <label>Occurred At</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>