dig-src/main/default/objects/Emission__c/fields/PrevHash__c.field-meta.xml
<CustomField>
    <fullName>PrevHash__c</fullName>
    <label>Previous Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>