dig-src/main/default/objects/Emission__c/fields/Receipt__c.field-meta.xml
<CustomField>
    <fullName>Receipt__c</fullName>
    <label>Receipt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>