dig-src/main/default/objects/Emission__c/fields/ReceiptRef__c.field-meta.xml
<CustomField>
    <fullName>ReceiptRef__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Reference</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipName>Emissions</relationshipName>
    <type>Lookup</type>
</CustomField>