dig-src/main/default/objects/Emission__c/fields/Sequence_Num__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Num__c</fullName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>