dig-src/main/default/objects/Emission__c/fields/Stream__c.field-meta.xml
<CustomField>
    <fullName>Stream__c</fullName>
    <label>Stream</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>