dig-src/main/default/objects/Emission__c/fields/Stream_Idem__c.field-meta.xml
<CustomField>
    <fullName>Stream_Idem__c</fullName>
    <externalId>true</externalId>
    <label>Stream Idem</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>