dig-src/main/default/objects/Emission__c/fields/Stream_Seq__c.field-meta.xml
<CustomField>
    <fullName>Stream_Seq__c</fullName>
    <description>Groupable surrogate: Stream__c + &apos;:&apos; + Sequence__c (v1) (v2)</description>
    <label>Stream Seq</label>
    <length>120</length>
    <type>Text</type>
</CustomField>